# Bathory2

./: .gitignore  CMakeLists.txt  compile_commands.json  meson.build
src/: article.cpp  article.hpp  feed.cpp  feed.hpp  main.cpp  window.cpp  window.hpp
