cmake_minimum_required(VERSION 3.16.4)
project(bathory2)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
find_package(CURL REQUIRED)
include_directories(${CURL_INCLUDE_DIR})
#find_package(PugiXML REQUIRED)
#include_directories(${PUGIXML_INCLUDE_DIR})
add_executable(bathory2 src/main.cpp src/feed.cpp src/window.cpp src/article.cpp)
add_subdirectory(third_party/pugixml)
target_link_libraries(bathory2 pugixml ${CURSES_LIBRARIES} ${CURL_LIBRARIES})
